--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITSoft.mx</title>
+    <title>Servidor Websockets | Login</title>
     <link href="./media/favicon.png" rel="icon" type="image/png" />
     <link
       rel="stylesheet"
@@ -19,23 +19,63 @@
   </head>
 
   <body>
-    <h1>Bands</h1>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#ID</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Votos</th>
-          <th scope="col">Opciones</th>
-        </tr>
-      </thead>
-      <tbody id="bandTableBody"></tbody>
-    </table>
+    <div
+      class="vw-100 vh-100 d-flex align-items-center justify-content-center border"
+    >
+      <div class="login-container col-10 col-sm-8 col-md-6 col-lg-4 p-3 shadow">
+        <form method="POST" action="">
+          <div class="p-3">
+            <div
+              class="card-text alert alert-danger d-none"
+              id="error"
+              role="alert"
+            >
+              Algún error!!
+            </div>
+            <label for="email" class="col-md-4 col-form-label text-md-end"
+              >Email:</label
+            >
+            <input
+              id="email"
+              type="email"
+              class="form-control"
+              name="email"
+              value=""
+              required
+              autocomplete="email"
+              autofocus
+            />
+          </div>
+          <div class="p-3">
+            <label for="password" class="col-md-4 col-form-label text-md-end"
+              >Password</label
+            >
+            <input
+              id="password"
+              type="password"
+              class="form-control"
+              name="password"
+              required
+              autocomplete="current-password"
+            />
+          </div>
+          <div class="p-3 d-grid gap-2">
+            <button type="submit" class="btn btn-primary btn-block">
+              Login
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
 
     <script src="socket.io/socket.io.js"></script>
     <script>
-      const socket = io();
+      const socket = io({
+        extraHeaders: {
+          "x-token":
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1aWQiOiI2NWM3OGU3M2FmZDFkNzA1NTgyNDhhYWMiLCJpYXQiOjE3MDgwMTI5MjQsImV4cCI6MTcwODA5OTMyNH0.AKCC5BcsK0qwOEsqDS0PqCLbrv9xDG52M-orvxT4HD8", // Reemplaza tuTokenJWT con el token real
+        },
+      });
 
       socket.on("connect", () => {
         console.log("Conectado al servidor");
